# dataproc-mcp

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: example_usage.py  mcp_server_config.json
src/dataproc_mcp_server/: __init__.py  __main__.py  _version.py  batch_client.py  dataproc_client.py  gcloud_config.py  server.py
tests/: __init__.py  test_batch_client.py  test_dataproc_client.py  test_server.py
